[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/character/barbarian/barbarian01/move04.png" type="Texture" id=1]
[ext_resource path="res://scripts/Barbarian.gd" type="Script" id=2]
[ext_resource path="res://assets/character/barbarian/barbarian01/dead02.png" type="Texture" id=3]
[ext_resource path="res://assets/character/barbarian/barbarian01/dead03.png" type="Texture" id=4]
[ext_resource path="res://assets/character/barbarian/barbarian01/move02.png" type="Texture" id=5]
[ext_resource path="res://assets/character/barbarian/barbarian01/move03.png" type="Texture" id=6]
[ext_resource path="res://assets/character/barbarian/barbarian01/dead01.png" type="Texture" id=7]
[ext_resource path="res://assets/character/barbarian/barbarian01/move01.png" type="Texture" id=8]
[ext_resource path="res://assets/character/barbarian/barbarian02/move02.png" type="Texture" id=9]
[ext_resource path="res://assets/character/barbarian/barbarian02/move04.png" type="Texture" id=10]
[ext_resource path="res://assets/character/barbarian/barbarian02/dead02.png" type="Texture" id=11]
[ext_resource path="res://assets/soundEffects/ah.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/soundEffects/fall.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/soundEffects/ah3..wav" type="AudioStream" id=14]
[ext_resource path="res://assets/soundEffects/ah2.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/soundEffects/touchArrow.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/character/barbarian/barbarian02/move01.png" type="Texture" id=17]
[ext_resource path="res://assets/character/barbarian/barbarian02/move03.png" type="Texture" id=18]
[ext_resource path="res://assets/character/barbarian/barbarian02/dead03.png" type="Texture" id=19]
[ext_resource path="res://assets/character/barbarian/barbarian02/dead01.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 11 ), ExtResource( 19 ) ],
"loop": false,
"name": "dying02",
"speed": 1.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "falling02",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "dying01",
"speed": 1.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 9 ), ExtResource( 18 ), ExtResource( 10 ) ],
"loop": true,
"name": "default02",
"speed": 1.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "default01",
"speed": 1.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "falling01",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 51.4784
height = 134.83

[node name="Barbarian" type="Area2D" groups=[
"ennemies",
]]
scale = Vector2( 0.7, 0.7 )
z_index = 1
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -105.129, 5.98737 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )
animation = "default02"
frame = 1
speed_scale = 8.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.86794, 6.84269 )
rotation = 0.0170966
shape = SubResource( 2 )

[node name="unpopTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="lifeTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true
autostart = true

[node name="shot" type="AudioStreamPlayer2D" parent="." groups=[
"sound",
]]
stream = ExtResource( 12 )
volume_db = 9.0
bus = "Sound"

[node name="shot2" type="AudioStreamPlayer2D" parent="." groups=[
"sound",
]]
stream = ExtResource( 15 )
volume_db = -6.0
bus = "Sound"

[node name="shot3" type="AudioStreamPlayer2D" parent="." groups=[
"sound",
]]
stream = ExtResource( 14 )
bus = "Sound"

[node name="fall" type="AudioStreamPlayer2D" parent="." groups=[
"sound",
]]
stream = ExtResource( 13 )
volume_db = 14.0
bus = "Sound"

[node name="ArrowTouch" type="AudioStreamPlayer2D" parent="." groups=[
"sound",
]]
stream = ExtResource( 16 )
volume_db = -10.0
bus = "Sound"
[connection signal="area_entered" from="." to="." method="_on_Barbarian_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Barbarian_area_exited"]
[connection signal="timeout" from="unpopTimer" to="." method="unpop"]
[connection signal="timeout" from="lifeTimer" to="." method="survive"]
